--- a/src/print.html
+++ b/src/print.html
@@ -75,7 +75,7 @@
         const totalSlides = 15;
         
         const folderName = "src";
-        const fileNamePrefix = "term project presentation (";
+        const fileNamePrefix = "term project (";
         const fileNameSuffix = ").html";
         const wrapper = document.getElementById('slides-wrapper');
 
