--- a/src/print.html
+++ b/src/print.html
@@ -84,7 +84,7 @@
             container.className = 'slide-container';
 
             const iframe = document.createElement('iframe');
-            iframe.src = `${folderName}/${fileNamePrefix}${i}${fileNameSuffix}`;
+            iframe.src = `./${fileNamePrefix}${i}${fileNameSuffix}`;
             
             container.appendChild(iframe);
             wrapper.appendChild(container);
