--- a/src/term project (1).html
+++ b/src/term project (1).html
@@ -89,7 +89,7 @@
                 </div>
                 <div>
                     <p class="text-sm text-blue-300 font-bold uppercase">Presenter</p>
-                    <p class="text-2xl font-bold">박천웅</p>
+                    <p class="text-2xl font-bold">박천웅(ID : 202545335)</p>
                 </div>
             </div>
             <div class="h-10 w-px bg-gray-600"></div>
@@ -106,8 +106,8 @@
 
         <!-- 하단 장식 -->
         <div class="absolute bottom-10 right-12 text-right opacity-50">
-            <p class="text-xs text-gray-500 tracking-widest">COMPUTER VISION & SIGNAL PROCESSING</p>
-            <p class="text-xs text-gray-500 mt-1">2024 TERM PROJECT</p>
+            <p class="text-xs text-gray-500 tracking-widest">COMPUTER VISION</p>
+            <p class="text-xs text-gray-500 mt-1">2025-2 TERM PROJECT</p>
         </div>
     </div>
 
