--- a/src/term project (11).html
+++ b/src/term project (11).html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+	<script>
+		MathJax = {
+		  tex: {
+			inlineMath: [['$', '$'], ['\\(', '\\)']]
+		  },
+		  svg: {
+			fontCache: 'global'
+		  }
+		};
+		</script>
+	<script type="text/javascript" id="MathJax-script" async
+		src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+	</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slide 12 - Final Procedure</title>
+    <title>Slide 4 - Redefined Objective</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <!-- MathJax -->
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
+		.math-inline {
+			white-space: nowrap;
+		}
+
+		mjx-container[jax="SVG"] {
+			display: inline-block;
+		}
         body {
             margin: 0;
             padding: 0;
@@ -30,14 +47,14 @@
             overflow: hidden;
             color: white;
         }
-        .step-box {
-            background: rgba(31, 41, 55, 0.6);
-            border: 1px solid rgba(75, 85, 99, 0.4);
-            backdrop-filter: blur(5px);
+        .metric-box {
+            background: rgba(30, 41, 59, 0.7);
+            border: 1px solid rgba(59, 130, 246, 0.3);
+            transition: all 0.3s ease;
         }
-        .arrow-right {
-            color: #4b5563;
-            font-size: 1.2rem;
+        .metric-box:hover {
+            border-color: rgba(59, 130, 246, 0.8);
+            transform: translateY(-2px);
         }
     </style>
 </head>
