--- a/src/term project (12).html
+++ b/src/term project (12).html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+	<script>
+		MathJax = {
+		  tex: {
+			inlineMath: [['$', '$'], ['\\(', '\\)']]
+		  },
+		  svg: {
+			fontCache: 'global'
+		  }
+		};
+		</script>
+	<script type="text/javascript" id="MathJax-script" async
+		src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+	</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slide 13 - Experimental Results</title>
+    <title>Slide 4 - Redefined Objective</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <style>
+		.math-inline {
+			white-space: nowrap;
+		}
+
+		mjx-container[jax="SVG"] {
+			display: inline-block;
+		}
         body {
             margin: 0;
             padding: 0;
@@ -27,9 +47,14 @@
             overflow: hidden;
             color: white;
         }
-        .chart-container {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+        .metric-box {
+            background: rgba(30, 41, 59, 0.7);
+            border: 1px solid rgba(59, 130, 246, 0.3);
+            transition: all 0.3s ease;
+        }
+        .metric-box:hover {
+            border-color: rgba(59, 130, 246, 0.8);
+            transform: translateY(-2px);
         }
     </style>
 </head>
