--- a/src/term project (4).html
+++ b/src/term project (4).html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+	<script>
+		MathJax = {
+		  tex: {
+			inlineMath: [['$', '$'], ['\\(', '\\)']]
+		  },
+		  svg: {
+			fontCache: 'global'
+		  }
+		};
+		</script>
+	<script type="text/javascript" id="MathJax-script" async
+		src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+	</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slide 4 - Redefined Objective</title>
@@ -8,6 +21,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <style>
+		.math-inline {
+			white-space: nowrap;
+		}
+
+		mjx-container[jax="SVG"] {
+			display: inline-block;
+		}
         body {
             margin: 0;
             padding: 0;
@@ -51,7 +71,11 @@
         <div class="bg-gradient-to-r from-gray-800 to-gray-900 p-8 rounded-2xl border-l-8 border-green-500 shadow-xl mb-8">
             <h3 class="text-blue-400 font-bold tracking-widest uppercase mb-2 text-sm">Key Question</h3>
             <p class="text-3xl font-bold text-white leading-relaxed">
-                "Motion Magnification 전·후의 <span class="text-green-400">Pose Instability 변화량($\Delta U$)</span>이<br>
+                "Motion Magnification 전·후의
+				<span class="text-green-400">
+					Pose Instability 변화량
+					<span class="math-inline">($\Delta U$)</span>
+				</span>이<br>
                 <span class="text-yellow-400">ADL</span>과 <span class="text-red-400">Pre-Fall</span>을 구분하는 신호가 될 수 있는가?"
             </p>
         </div>
